--- a/TccWeb.csproj
+++ b/TccWeb.csproj
@@ -154,6 +154,22 @@
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Site.Master" />
+    <Content Include="Tela acompanhamento.html" />
+    <Content Include="Tela antecipar boleto.html" />
+    <Content Include="Tela de ajuda.html" />
+    <Content Include="Tela de alteração de senha.html" />
+    <Content Include="Tela de boleto.html" />
+    <Content Include="Tela de cadastro.html" />
+    <Content Include="Tela de exibir mais.html" />
+    <Content Include="Tela de login.html" />
+    <Content Include="Tela de quitar financiamento.html" />
+    <Content Include="Tela de recuperação.html" />
+    <Content Include="Tela de simulação.html" />
+    <Content Include="Tela de verificação de 2 etapas.html" />
+    <Content Include="Tela direcionada a função do boleto.html" />
+    <Content Include="Tela do usuario.html" />
+    <Content Include="Tela menu inicial.html" />
+    <Content Include="Tela renegociação de boleto.html" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
