Primeiro commit projeto site web

--- a/TccWeb.csproj
+++ b/TccWeb.csproj
@@ -125,6 +125,9 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="Images\financeira3.jpg" />
+    <Content Include="Images\topnav 8.jpg" />
+    <Content Include="Images\WhatsApp Image 2020-10-18 at 19.39.33.jpeg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
@@ -154,6 +157,10 @@
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Site.Master" />
+    <Content Include="styles\fundo.jpg" />
+    <Content Include="styles\melhor.jpg" />
+    <Content Include="styles\telasPag.css" />
+    <Content Include="styles\topnav 7.jpg" />
     <Content Include="Tela acompanhamento.html" />
     <Content Include="Tela antecipar boleto.html" />
     <Content Include="Tela de ajuda.html" />
@@ -212,12 +219,14 @@
     </Compile>
     <Compile Include="Site.Mobile.Master.cs">
       <DependentUpon>Site.Mobile.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Site.Mobile.Master.designer.cs">
       <DependentUpon>Site.Mobile.Master</DependentUpon>
     </Compile>
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="ViewSwitcher.ascx.designer.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
