Terceiro commit projeto web

--- a/TccWeb.csproj
+++ b/TccWeb.csproj
@@ -126,7 +126,7 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Images\financeira3.jpg" />
-    <Content Include="Images\icone projeto.png" />
+    <Content Include="Images\fundo.jpg" />
     <Content Include="Images\imagens_proejto.jpg" />
     <Content Include="Images\WhatsApp Image 2020-10-18 at 19.14.35.jpeg" />
     <Content Include="Images\WhatsApp Image 2020-10-18 at 19.39.33.jpeg" />
@@ -178,6 +178,7 @@
     <Content Include="Tela direcionada a função do boleto.html" />
     <Content Include="Tela do usuario.html" />
     <Content Include="Tela menu inicial.html" />
+    <Content Include="Tela pós Login.html" />
     <Content Include="Tela renegociação de boleto.html" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
