--- a/TccWeb.csproj
+++ b/TccWeb.csproj
@@ -163,22 +163,20 @@
     <Content Include="styles\melhor.jpg" />
     <Content Include="styles\telasPag.css" />
     <Content Include="styles\topnav 7.jpg" />
-    <Content Include="Tela acompanhamento.html" />
+    <Content Include="Tela Financiamento.html" />
     <Content Include="Tela antecipar boleto.html" />
     <Content Include="Tela de ajuda.html" />
     <Content Include="Tela de alteração de senha.html" />
     <Content Include="Tela de boleto.html" />
     <Content Include="Tela de cadastro.html" />
-    <Content Include="Tela de exibir mais.html" />
+    <Content Include="Tela acompanhamento.html" />
     <Content Include="Tela de login.html" />
     <Content Include="Tela de quitar financiamento.html" />
     <Content Include="Tela de recuperação.html" />
     <Content Include="Tela de simulação.html" />
-    <Content Include="Tela de verificação de 2 etapas.html" />
     <Content Include="Tela direcionada a função do boleto.html" />
-    <Content Include="Tela do usuario.html" />
     <Content Include="Tela menu inicial.html" />
-    <Content Include="Tela pós Login.html" />
+    <Content Include="Tela do Usuário.html" />
     <Content Include="Tela renegociação de boleto.html" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
